# oepl-json-adapter

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  RMV_Haltestellen_Tarifperiode_2025+2026_Stand_2026-05-27.csv  docker-compose.yml  pyproject.toml
config/: config.example.yaml
src/epaper_dashboard/: __init__.py  config.py  fingerprint.py  main.py  models.py  render.py  upload.py
src/epaper_dashboard/sources/: __init__.py  caldav_source.py  placeholder.py  rss_source.py  transit_source.py
