[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "epaper-dashboard"
version = "0.1.0"
description = "Small renderer/uploader for OpenEPaperLink dashboards"
requires-python = ">=3.12"
dependencies = [
    "Pillow>=10.4.0",
    "PyYAML>=6.0.2",
    "requests>=2.32.0",
    "feedparser>=6.0.11",
    "icalendar>=5.0.13",
    "python-dateutil>=2.9.0",
    "recurring-ical-events>=3.3.0",
]

[project.scripts]
epaper-dashboard = "epaper_dashboard.main:main"

[tool.setuptools.packages.find]
where = ["src"]
